--- a/stylesheet.css
+++ b/stylesheet.css
@@ -319,13 +319,15 @@ a {
 .aboutUs .cafeHeadImg,
 .location .cafeHeadImg,
 .contact .cafeHeadImg,
-.bakeries .cafeHeadImg {
+.bakeries .cafeHeadImg,
+.wedding .cafeHeadImg {
     width: 100%;
     height: 504px;
     object-fit: cover;
 }
 
-.aboutUs .contentWrapper #firstContent p {
+.aboutUs #firstContent p,
+.wedding #firstContent p {
     font-size: 17px;
     padding-top: 50px;
     text-align: left;
@@ -361,7 +363,7 @@ a {
 ***************** Contact us *********************
 */
 
-.contact #firstContent h4 {
+.contact h4 {
     letter-spacing: 0.09em;
     padding-top: 40px;
     font-size: 25px;
@@ -475,6 +477,23 @@ textarea {
 }
 
 
+/*
+***************** Wedding *********************
+*/
+
+h5 {
+    font-size: 25px;
+    padding-top: 25px;
+    font-weight: 100;
+}
+
+
+/* .wedding #firstContent p {
+    text-align: left;
+    font-size: 16px;
+} */
+
+
 /* Media Queries
 --------------------------------------------- */
 
@@ -526,7 +545,8 @@ textarea {
     .aboutUs .cafeHeadImg,
     .location .cafeHeadImg,
     .contact .cafeHeadImg,
-    .bakeries .cafeHeadImg {
+    .bakeries .cafeHeadImg,
+    .wedding .cafeHeadImg {
         width: 100%;
         height: 200px;
         object-fit: cover;
